@@ -9,7 +9,6 @@
 #include <music.hh>
 #include <math.h>
 
-#define APPLICATION_ID 1
 #define DATA_SIZE 1000
 
 
@@ -21,7 +20,7 @@ main (int nargs, char* argv[])
   double time;
   int rank;
 
-  MUSIC::setup* setup = new MUSIC::setup (APPLICATION_ID, nargs, argv);
+  MUSIC::setup* setup = new MUSIC::setup (nargs, argv);
 
   // Find out who we are
   rank = setup->communicator ().Get_rank ();
